--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,118 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300&family=Roboto:wght@300&display=swap');
+
 * {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
 }
 
-.body {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+body {
+    background: #2D0A1B;
+}
+
+.start-btn , .info-box{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -70%);
+}
+
+.start-btn button {
+    font-size: 25px;
+    font-weight: 600;
+    text-transform: uppercase;
+    text-decoration: none;
+    color:#2D0A1B;
+    background-color: #B83253;
+    padding: 15px 30px;
+    outline: none;
+    border: none;
+    border-radius: 5px;
+    backface-visibility: hidden;
+    transition: all 0.5s;
+    box-shadow: 0px 4px 25px #000;
+    cursor: pointer;
+}
+
+.start-btn button:hover {
+    transform: translateY(-2.5px);
+}
+
+.start-btn button:active {
+    transform: translateY(1px);
+}
+
+.info-box {
+    width: 650px;
+    background-color: #FBA490;
+    border-radius: 5px;
+    padding: 10px;
+    box-shadow: 0px 4px 25px #000;
+}
+
+.info-box .info-title{
+    text-transform: uppercase;
+    width: 100%;
+    padding: 30px 40px;
+    display: flex;
+    align-items: center;
+    font-size: 25px;
+    font-weight: 600;
+}
+
+.info-box .info-list{
+    padding: 15px 40px;
+    font-size: 20px;
+    font-weight: 500;
+}
+
+.info-box .info-list .info {
+    margin: 7.5px 0;
+}
+
+.info-box .buttons {
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    padding: 0 35px;
+    margin: 10px;
+    margin-bottom: 15px;
+}
+
+.info-box .buttons button {
+    font-size: 17.5px;
+    font-weight: 600;
+    text-transform: uppercase;
+    text-decoration: none;
+    color:#2D0A1B;
+    background-color: transparent;
+    padding: 5px 25px;
+    margin: 5px;
+    outline: none;
+    border: none;
+    border-radius: 5px;
+    backface-visibility: hidden;
+    transition: all 0.5s;
+    cursor: pointer;
+}
+
+.info-box .buttons .quit {
+    border: 2px solid #B83253;
+}
+.info-box .buttons .restart {
+    border: 2px solid #B83253;
+    background-color: #B83253;
+}
+
+.info-box .buttons button:hover {
+    transform: translateY(-2.5px);
+}
+
+.info-box .buttons button:active {
+    transform: translateY(1px);
+}
+
+.hidden {
+    display: none;
 }
