--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,7 @@ body {
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -65%);
+    transform: translate(-50%, -50%);
 }
 
 .start-btn button {
@@ -54,7 +54,7 @@ body {
 .info-title, .title{
     text-transform: uppercase;
     width: 65%;
-    padding: 30px 40px;
+    padding: 30px 25px;
     display: flex;
     align-items: center;
     font-size: 28px;
@@ -127,6 +127,7 @@ body {
     display: flex;
     position: relative;
     z-index: 100;
+    margin-bottom: 25px;
 }
 
 .quiz-box footer {
@@ -158,20 +159,56 @@ body {
     text-transform: uppercase;
     display: flex;
     justify-content: flex-start;
-    padding: 25px 45px;
+    padding: 25px 30px;
     font-size: 17.5px;
     font-weight: 600;
 }
 
 .que-text {
-    font-size: 20px;
+    font-size: 30px;
     font-weight: 600;
-    padding: 15px 40px;
+    padding: 0px 40px;
+    letter-spacing: 1.5px;
 }
 
 .option-list {
     font-size: 20px;
     padding: 25px 40px;
+    display: block;
+}
+
+.option {
+    display: flex;
+    background-color: #ea849e;
+    border: 1px solid #B83253;
+    border-radius: 5px;
+    padding: 10px 20px;
+    margin-bottom: 10px;
+    align-items: center;
+    justify-content: space-between;
+    cursor: pointer;
+}
+
+.icon {
+    height: 24px;
+    width: 24px;
+    font-size: 16.5px;
+    line-height: 24px;
+    border: 2px solid #B83253;
+    border-radius: 50%;
+    text-align: center;
+}
+
+.tick {
+    color: #23903c;
+    border-color: #23903c;
+    background: #23903c30;
+}
+
+.cross {
+    color: #a42834;
+    border-color: #a42834;
+    background: #a4283430;
 }
 
 .hidden {
