--- a/styles.css
+++ b/styles.css
@@ -158,9 +158,8 @@ body {
 .total-que span{
     text-transform: uppercase;
     display: flex;
-    justify-content: flex-start;
     padding: 25px 30px;
-    font-size: 17.5px;
+    font-size: 20px;
     font-weight: 600;
 }
 
@@ -187,6 +186,10 @@ body {
     align-items: center;
     justify-content: space-between;
     cursor: pointer;
+}
+
+.option:hover {
+    background-color: #d25c7a;
 }
 
 .icon {
